# gigly_app

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
gigly_project/: manage.py
gigly_project/chat_app/: consumers.py  forms.py  models.py  urls.py  views.py
gigly_project/chat_app/migrations/: 0001_initial.py  0002_chatgroup_participants.py  0003_rename_groupmessage_chatmessage.py
gigly_project/chat_app/templates/chat_app/: chat.html
gigly_project/core_app/: admin.py  apps.py  context_processors.py  forms.py  urls.py  views.py
gigly_project/core_app/migrations/: 0001_initial.py
gigly_project/core_app/templates/: createtask.html  index.html  login.html  profile.html  signup.html
gigly_project/core_app/templates/core_app/: dashboard.html  discover.html  index.html
gigly_project/core_app/tests/: test_models.py
gigly_project/gigly_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gigly_project/gigly_app/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_age.py  0004_remove_user_is_buyer_remove_user_is_seller_and_more.py  0005_rename_is_poster_user_is_buyer_and_more.py
gigly_project/gigly_app/templates/: base.html  dashboard.html  index.html  login.html  signup.html
gigly_project/gigly_project/: asgi.py  settings.py  urls.py  wsgi.py
gigly_project/templates/: base.html
