[project]
name = "gigly-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django-allauth>=65.8.1",
    "django-cleanup>=9.0.0",
    "django-hijack>=3.7.2",
    "django-htmx>=1.23.0",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
]
